[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/fonts/Pixeltype.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://tileset.tres" type="TileSet" id=2]
[ext_resource path="res://src/GameOver.gd" type="Script" id=3]
[ext_resource path="res://Assets/audio/game_over.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[node name="GameOver" type="Node"]
script = ExtResource( 3 )
_score_path = NodePath("Text/FinalScore/score")

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 4, 4 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 65537, 1, 0, 65538, 2, 0, 65539, 12, 0, 65537, 13, 0, 65538, 14, 0, 65539, 65536, 0, 131073, 65537, 0, 131074, 65538, 0, 131075, 65548, 0, 131073, 65549, 0, 131074, 65550, 0, 131075, 131072, 0, 131073, 131073, 0, 131074, 131074, 0, 131075, 131084, 0, 131073, 131085, 0, 131074, 131086, 0, 131075, 196608, 0, 131073, 196609, 0, 131074, 196610, 0, 131075, 196620, 0, 131073, 196621, 0, 131074, 196622, 0, 131075, 262144, 0, 196609, 262145, 0, 5, 262146, 0, 131075, 262156, 0, 196609, 262157, 0, 5, 262158, 0, 131075, 327681, 0, 131073, 327682, 0, 65540, 327683, 0, 65539, 327693, 0, 131073, 327694, 0, 65540, 327695, 0, 65539, 393217, 0, 131073, 393218, 0, 131074, 393219, 0, 131075, 393229, 0, 131073, 393230, 0, 131074, 393231, 0, 131075, 458753, 0, 131073, 458754, 0, 131074, 458755, 0, 131075, 458765, 0, 131073, 458766, 0, 131074, 458767, 0, 131075, 524289, 0, 196609, 524290, 0, 196610, 524291, 0, 196611, 524301, 0, 196609, 524302, 0, 196610, 524303, 0, 196611 )

[node name="Text" type="VBoxContainer" parent="."]
margin_left = 308.698
margin_top = 4.46356
margin_right = 724.698
margin_bottom = 128.464
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverText" type="Label" parent="Text"]
margin_right = 416.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "Game Over!"

[node name="FinalScore" type="HBoxContainer" parent="Text"]
margin_top = 84.0
margin_right = 416.0
margin_bottom = 124.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Text/FinalScore"]
margin_right = 236.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "final score: "

[node name="score" type="Label" parent="Text/FinalScore"]
margin_left = 240.0
margin_right = 264.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="PlayAgain" type="Button" parent="."]
margin_left = 321.0
margin_top = 130.0
margin_right = 577.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 3 )
text = "play again"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="."]
margin_left = 382.431
margin_top = 320.285
margin_right = 638.431
margin_bottom = 447.285
custom_fonts/font = SubResource( 3 )
text = "main menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverJingle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -18.0
autoplay = true
[connection signal="button_up" from="PlayAgain" to="." method="_on_PlayAgain_button_up"]
[connection signal="button_up" from="MainMenu" to="." method="_on_MainMenu_button_up"]
